test/bad/path2.pacc
/*
nocc 'parse.c: In function ‘pacc_parse’:
parse.c:538:16: error: variable or field ‘a’ declared void'
*/

P ← a:A { a }
A :: void ← "5"
